# pokemon-champions-assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  pytest.ini
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: battle.py  pokemon.py  recognition.py  types.py  video.py
backend/app/core/: settings.py
backend/pokemon_champions_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_battle_roi_annotation_samples.py  test_battle_session_api.py  test_battle_session_store.py  test_bootstrap_paddleocr_assets.py  test_capture_session.py  test_champions_database_updater.py  test_chinese_ocr_recognizer.py  test_cors.py  test_data_loader.py  test_full_flow_tracking_v2.py  test_health.py  test_layout_templates.py  test_manual_override_api.py  test_move_list_recognizer.py  test_name_matcher.py  test_ocr_postprocess.py  test_paddle_ocr_adapter.py  test_phase_detector.py  test_phase_detector_real_samples.py  test_pikalytics_ma1_source.py  test_pokedex_full_index.py  test_pokemon_api.py  test_real_ocr_battle_samples.py  test_real_ocr_team_select_samples.py  test_recognition_api.py  test_recognition_models.py  test_recognition_pipeline.py  test_recognition_pipeline_enhanced.py  test_recognition_runtime.py  test_release_frontend_server.py  test_release_frozen_runtime.py  test_release_runtime.py  test_roi_capture.py  test_settings.py  test_types_api.py  test_verify_release_script.py  test_video_source_service.py  test_video_sources_api.py  test_windows_packaging_script.py
frontend/: package-lock.json  (+1 more)
(+106 files in other folders)
