[project]
name = "pokemon-champions-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Pokemon Champions Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "imageio-ffmpeg>=0.6,<1.0",
    "opencv-python-headless>=4.9,<5.0",
    "pydantic>=2.0,<3.0",
    "pygrabber>=0.2,<1.0; sys_platform == 'win32'",
    "rapidfuzz>=3.9,<4.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<10.0",
]
ocr = [
    "rapidocr-onnxruntime>=1.3,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [".", ".."]
markers = [
    "real_ocr: exercises RapidOCR-backed screenshot regressions when optional OCR deps and sample images are available",
]
